2005-08-02  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * doc/Makefile.am
    Fix a bug preventing the inclusion of the html API docs in the tarball.

    * src/src_zoh.c src/src_linear.c
    Improve calculation of input_index.
    Fix updating of input_index (thanks to Stas Sergeev).

    * tests/calc_snr.c
    Fix a compile problem when FFTW is not present (thanks to Stas Sergeev).

2005-04-18  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac src/Makefile.am
    Fix minor problems with generation of shared library version number.

2005-02-19  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/faq.html
    Add a question about the use of src_simple().

    * src/api_simple.html
    Fix defintion of src_ratio.

2004-12-04  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac tests/Makefile.am tests/*.c
    Ditch detection and use of libefence. Valgrind is a far better debugging
    tool.

    * INSTALL
    Write complete libsamplerate specific install instructions.

2004-10-06  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * src/configure.ac src/makefile.am
    Finally fix the bulding of DLLs on Win32/MinGW.

    * tests/makefile.am
    Fix running of tests on Win32/MinGW.

2004-09-30  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac Win32/Makefile.mingw.in
    More support for compiling on Win32 using MinGW. Now uses FFTW3.

    * examples/audio_out.c
    Remove include of <mmreg.h> on win32.

2004-09-12  Erik de Castro Lopo  <erikd AT mega-nerd DOT com>

    * configure.ac Win32/Makefile.mingw.in
    Add preliminary support for compiling on Win32 using MinGW.

    * configure.ac 
    Bump version to 0.1.2.
    Add --enable-gcc-werror configure option.

    * examples/sndfile-resample.c tests/src-evaluate.c
    Use ISO C standard function remove instead of unlink.

    * Win32/Makefile.msvc
    Add the top level directory to the include path (for sndfile.h).
